--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,8 +27,8 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/grooming">Grooming</a></li>
-          <li><a href="">Boarding (Coming soon!)</a></li>
-          <li><a href="">Training (Coming soon!)</a></li>
+          <li><a href="/boarding">Boarding</a></li>
+          <li><a href="/training">Training</a></li>
         </ul>
       </nav>
     </header>
