--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
     <h3>Register</h3>
 
     <!-- Allows customers to register an account. -->
-    <form action="/customers" method="post">
+    <form action="/customer-list" method="post">
 
       <!-- Label and input for customerID. -->
       <label class="signup" for="customerId">Customer ID:</label>
