--- a/views/header.ejs
+++ b/views/header.ejs
@@ -30,6 +30,8 @@
           <li><a href="/boarding">Boarding</a></li>
           <li><a href="/training">Training</a></li>
           <li><a href="/register">Registration</a></li>
+          <li><a href="/customer-list">Customers</a></li>
+        </ul>
         </ul>
       </nav>
     </header>
