--- a/views/header.ejs
+++ b/views/header.ejs
@@ -32,6 +32,7 @@
           <li><a href="/register">Registration</a></li>
           <li><a href="/customer-list">Customers</a></li>
           <li><a href="/booking">Booking</a></li>
+          <li><a href="/my-appointments">Appointments</a></li>
         </ul>
         </ul>
       </nav>
